--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,45 @@
 buildscript {
+    ext {
+        springBootVersion = '1.5.1.RELEASE'
+    }
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
-
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
+apply plugin: 'spring-boot'
 
 jar {
-    baseName = 'gs-serving-web-content'
-    version =  '0.1.0'
-}
+    baseName = 'demo'
+    version = '0.0.1-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-
-    maven {
-        url 'https://repo.spring.io/libs-snapshot'
+    manifest {
+        attributes 'Main-Class': 'com.vitmo.VitmoApplication'
     }
 }
 
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-devtools")
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'mysql:mysql-connector-java'
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("org.springframework.boot:spring-boot-starter-security")
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    testCompile("junit:junit")
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
+    compile 'mysql:mysql-connector-java'
+    compile 'commons-dbcp:commons-dbcp:1.4'
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+}
 
-    compile 'org.springframework.security:spring-security-web:4.2.2.BUILD-SNAPSHOT'
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.3'
 }
