--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-spring.datasource.username=springuser
+#settings for database
+spring.datasource.url=jdbc:mysql://138.197.93.166/vitmo_app
+spring.datasource.username=oleg-campus-ifmo
 spring.datasource.password=qwerty
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#turned on to enable lazy loading
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
