--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #settings for database
 spring.datasource.url=jdbc:mysql://138.197.93.166/vitmo_app
-spring.datasource.username=remoteYana
+spring.datasource.username=oleg-campus-ifmo
 spring.datasource.password=qwerty
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #turned on to enable lazy loading
