Do refactoring in controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #settings for database
-spring.datasource.url=jdbc:mysql://138.197.93.166/vitmo_app
-spring.datasource.username=remoteYana
-spring.datasource.password=qwerty
+spring.datasource.url=jdbc:mysql://localhost/vitmo_app
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #turned on to enable lazy loading
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans = true
